<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.registrationScreen.userRegistrationScreen.AccountRegistrationPageActivity">


    <ScrollView
        android:id="@+id/AccountRegistrationPage_ScrollView"
        android:layout_width="305dp"
        android:layout_height="450dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AccountRegistrationPage_Name_Layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="#31FFFFFF"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/AccountRegistrationPage_DOB_Layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AccountRegistrationPage_Name_Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AccountRegistrationPage_DOB_Layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="#31FFFFFF"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/AccountRegistrationPage_Email_Layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AccountRegistrationPage_Name_Layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AccountRegistrationPage_DOB_Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/date_of_birth_mm_dd_yyyy"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AccountRegistrationPage_Email_Layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="#31FFFFFF"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/AccountRegistrationPage_Username_Layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AccountRegistrationPage_DOB_Layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AccountRegistrationPage_Email_Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AccountRegistrationPage_Username_Layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="#31FFFFFF"
                app:counterEnabled="true"
                app:counterMaxLength="12"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/AccountRegistrationPage_Password_Layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AccountRegistrationPage_Email_Layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AccountRegistrationPage_Username_Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/username"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AccountRegistrationPage_Password_Layout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:paddingBottom="16dp"
                app:boxBackgroundColor="#31FFFFFF"
                app:counterEnabled="false"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AccountRegistrationPage_Username_Layout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AccountRegistrationPage_Password_Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/AccountRegistrationPage_TOS_Checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checked="false"
                android:text="@string/agree_to"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.227"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AccountRegistrationPage_Password_Layout"
                app:layout_constraintVertical_bias="0.006" />

            <Button
                android:id="@+id/AccountRegistrationPage_Register_Button"
                android:layout_width="120dp"
                android:layout_height="56dp"
                android:layout_marginBottom="4dp"
                android:text="@string/create_account"
                app:backgroundTint="#480DAF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AccountRegistrationPage_TOS_Checkbox"
                app:layout_constraintVertical_bias="0.4" />

            <TextView
                android:id="@+id/AccountRegistrationPage_TOS_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/terms_and_conditions"
                android:textColor="#1A8377"
                app:layout_constraintBottom_toBottomOf="@+id/AccountRegistrationPage_TOS_Checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toEndOf="@+id/AccountRegistrationPage_TOS_Checkbox"
                app:layout_constraintTop_toTopOf="@+id/AccountRegistrationPage_TOS_Checkbox"
                app:layout_constraintVertical_bias="0.517"
                android:focusable="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>