<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.bottomTabScreens.PetSwipingPageActivity">

    <RelativeLayout
        android:id="@+id/fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/buttonPanel"
        android:padding="10dp">


        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="com.example.frontend.view.bottomTabScreens.SwipingListingFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/page_progress"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/no_pets_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/no_pets_found" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/bottom_navigation"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/dislike_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:clickable="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/dislike_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/dislike"
                android:src="@drawable/ic_baseline_thumb_down_24" />

            <TextView
                android:id="@+id/dislike_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dislike_button"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/dislike" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/adorable_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_toEndOf="@+id/dislike_layout"
            android:clickable="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/adorable_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/adorable"
                android:src="@drawable/ic_baseline_pets_24" />

            <TextView
                android:id="@+id/adorable_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/adorable_button"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/adorable" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/like_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/adorable_layout"
            android:clickable="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/like_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/like"
                android:src="@drawable/ic_baseline_thumb_up_24" />

            <TextView
                android:id="@+id/like_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/like_button"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/like" />

        </RelativeLayout>


    </RelativeLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_navigation" />
</RelativeLayout>